--- a/sidebar.html
+++ b/sidebar.html
@@ -10,3 +10,4 @@
 <a href="#numberThousand" class="sideBarItem">Number Thousand</a>
 <a href="#arrayFunction" class="sideBarItem">Array Function</a>
 <a href="#numericInp" class="sideBarItem">Apply Numeric Input</a>
+<a href="#conditionalStatement" class="sideBarItem">Conditional Statement</a>
