add modal fade class

--- a/debugSidebar.html
+++ b/debugSidebar.html
@@ -4,7 +4,7 @@
 <a href="#error1" class="sideBarItem">JS Error</a>
 <a href="#cssErr1" class="sideBarItem">CSS Error</a>
 
-<div class="modal" id="viewImg">
+<div class="modal fade" id="viewImg">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <!-- Modal Header -->
