--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     </div>
     <a href="#" class="backToTop"><i class="fa fa-arrow-up"></i></a>
 
-    <div class="modal" id="buildArray">
+    <div class="modal fade" id="buildArray">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <!-- Modal Header -->
@@ -223,7 +223,7 @@
         </div>
     </div>
 
-    <div class="modal" id="buildObject">
+    <div class="modal fade" id="buildObject">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <!-- Modal Header -->
@@ -250,7 +250,7 @@
         </div>
     </div>
 
-    <div class="modal" id="buildObjectArray">
+    <div class="modal fade" id="buildObjectArray">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <!-- Modal Header -->
@@ -277,7 +277,7 @@
         </div>
     </div>
 
-    <div class="modal" id="buildHtmlFromArray">
+    <div class="modal fade" id="buildHtmlFromArray">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <!-- Modal Header -->
