--- a/sidebar.html
+++ b/sidebar.html
@@ -6,8 +6,9 @@
 <a href="#doSpaces" class="sideBarItem">Digital Ocean</a>
 <a href="#socket" class="sideBarItem">Socket Function</a>
 <a href="#json" class="sideBarItem">JSON Function</a>
+<a href="#applyMaintenance" class="sideBarItem">Apply Maintenance</a>
 <span class="sideBarTitle">General Function</span>
 <a href="#numberThousand" class="sideBarItem">Number Thousand</a>
-<a href="#arrayFunction" class="sideBarItem">Array Function</a>
+<a href="#arrayFunction" class="sideBarItem">Array / Object Function</a>
 <a href="#numericInp" class="sideBarItem">Apply Numeric Input</a>
 <a href="#conditionalStatement" class="sideBarItem">Conditional Statement</a>
