--- a/debugSidebar.html
+++ b/debugSidebar.html
@@ -6,14 +6,11 @@
 
 <div class="modal fade" id="viewImg">
     <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <!-- Modal Header -->
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
+      <div class="modal-content imgModal">
         <!-- Modal body -->
-        <div class="modal-body">
-           <img id="bigImg" src="" alt="" class="bigImg">
+        <div class="modal-body text-center">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <img id="bigImg" src="" alt="" class="bigImg">
         </div>
       </div>
     </div>
