--- a/index.html
+++ b/index.html
@@ -19,24 +19,16 @@
         <div class="bodyContent">
             <div class="sectionDisplay alert alert-success alert-dismissible">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
-                <p><b>Updated: </b></p>
+                <p><b>2021/07/21 Updated: </b></p>
                 <ol class="updateLog">
-                    <li>Array Function added Example
+                    <li>Apply Maintenance</li>
+                    <li>Debug Flow added new error
                         <ul>
-                            <li>Build Array</li>
-                            <li>Build Object</li>
-                            <li>Build Object Array</li>
-                            <li>Build HTML From Array</li>
+                            <li>When click button, run function but immediately refresh page</li>
+                            <li>Error message didn't clear keep duplicate when call api</li>
+                            <li>Same page but backend return two api with same error ID</li>
                         </ul>
                     </li>
-                    <li>Number Thousand added function
-                        <ul>
-                            <li>Remove Comma</li>
-                        </ul>
-                    </li>
-                    <li>Added JSON Function</li>
-                    <li>Added Conditional Statement</li>
-                    <li>Added Debug Flow</li>
                 </ol>
             </div>
             <div class="sectionDisplay" id="callBackend">
@@ -44,7 +36,7 @@
                 <p>Method 1</p>
                 <p>Use this method in all page except login.php</p>
                 <div class="codeBlock">
-                    <code>var url             = 'scripts/reqDefault.php';</code><code>var method          = 'POST';</code><code>var debug           = 0;</code><code>var bypassBlocking  = 0;</code><code>var bypassLoading   = 0;</code><code>var formData  = {</code><code>    command    : <span contenteditable="true"></span>, //api command name</code><code>    <span contenteditable="true"></span>: <span contenteditable="true"></span> //params that required to pass to backend</code><code>};</code><code>var fCallback = loadDefaultListing;</code><code>ajaxSend(url, formData, method, fCallback, debug, bypassBlocking, bypassLoading, 0); // Call backend using this function</code><br><code>function loadDefaultListing(data, message) {} // when function run successfully, will run this function (fCallback function)</code>
+                    <code>var url             = 'scripts/reqDefault.php';</code><code>var method          = 'POST';</code><code>var debug           = 0;</code><code>var bypassBlocking  = 0;</code><code>var bypassLoading   = 0;</code><code>var formData  = {</code><code>    command    : <span contenteditable="true">command1</span>, //api command name</code><code>    <span contenteditable="true">username</span>: <span contenteditable="true">username</span> //params that required to pass to backend</code><code>};</code><code>var fCallback = loadDefaultListing;</code><code>ajaxSend(url, formData, method, fCallback, debug, bypassBlocking, bypassLoading, 0); // Call backend using this function</code><br><code>function loadDefaultListing(data, message) {} // when function run successfully, will run this function (fCallback function)</code>
                 </div>
                 <p class="mt-3">Method 2</p>
                 <p>If method 1 not working, can try this method to call backend</p>
@@ -73,11 +65,11 @@
                     <code>$_SESSION["<span contenteditable="true">countryList</span>"] = $result['data']['<span contenteditable="true">countryList</span>'];</code>
                     <code>$_SESSION["<span contenteditable="true">username</span>"] = $result['data']['<span contenteditable="true">username</span>'];</code>
                 </div>
-                <p>To loop array from php session array</p>
+                <p class="nextMethod">To loop array from php session array</p>
                 <div class="codeBlock">
                     <code>&lt;?php foreach($_SESSION["<span contenteditable="true">countryList</span>"] as $value){ ?&gt;</code><code>    &lt;option value="&lt;?php echo $value['<span contenteditable="true">id</span>']; ?&gt;"&gt;&lt;?php echo $value['<span contenteditable="true">display</span>']; ?&gt;&lt;/option&gt;</code><code>&lt;?php } ?&gt;</code>
                 </div>
-                <p>To display session data</p>
+                <p class="nextMethod">To display session data</p>
                 <div class="codeBlock">
                     <code>&lt;?php echo $_SESSION['<span contenteditable="true">username</span>']; ?&gt;</code>
                 </div>
@@ -129,6 +121,32 @@
                     <code>$.ajax({</code><code>  url: "<span contenteditable="true">filename</span>",</code><code>  dataType: 'json',</code><code>  success: function(data) {</code><code>    // your code</code><code>  }</code><code>});</code>
                 </div>
             </div>
+            <div class="sectionDisplay" id="applyMaintenance">
+                <h4>Apply Maintenance</h4>
+                <p><a href="applyMaintenance.zip" download>Download Me</a></p>
+                <ol>
+                    <li>Replace class.general.php with the class.general.php that in this folder (member/include)</li>
+                    <li>All before login page
+                        <ul>
+                            <li>Login</li>
+                            <li>Public Registration</li>
+                            <li>Reset Password</li>
+                        </ul>
+                        add below code after include head.php
+                    </li>
+                    <li>Duplicate maintenance.php to your member folder, tune maintenance page design using login.css</li>
+                    <li>config.php add maintenance datetime</li>
+                </ol>
+
+                <p class="nextMethod">Code to apply after include head.php in before login page</p>
+                <div class="codeBlock">
+                    <code>&lt;?php</code><code>    $maintenance = General::checkMaintenance();</code><br><code>    if($maintenance){</code><code>        echo '&lt;script&gt;window.location.href="maintenance.php";&lt;/script&gt;';</code><code>        exit();</code><code>    }</code><code>?&gt;</code>
+                </div>
+                <p class="nextMethod">Config file maintenance datetime format</p>
+                <div class="codeBlock">
+                    <code>"startTs" => "2021-07-09 00:00:00",</code><code>"endTs" => "2021-07-09 19:13:00"</code>
+                </div>
+            </div>
             <div class="sectionDisplay" id="numberThousand">
                 <h4>Number Thousand</h4>
                 <p>Add comma to number</p>
@@ -143,7 +161,7 @@
                 </div>
             </div>
             <div class="sectionDisplay" id="arrayFunction">
-                <h4>Array Function</h4>
+                <h4>Array / Object Function</h4>
                 <div>
                     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#buildArray">Build Array</button>
                     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#buildObject">Build Object</button>
@@ -163,6 +181,11 @@
                 <div class="codeBlock">
                     <code>var filteredArr = (data.<span contenteditable="true">listing</span>).filter((item) => item.<span contenteditable="true">id</span> == <span contenteditable="true">id</span> )</code>
                 </div>
+                <p class="nextMethod">Get all keys of object</p>
+                <div class="codeBlock">
+                    <code>Object.keys(<span contenteditable="true">object</span>);</code>
+                </div>
+                <p>To get the first key from Object: Object.keys(object)[0];</p>
             </div>
             <div class="sectionDisplay" id="numericInp">
                 <h4>Apply Numeric Input</h4>
