--- a/sidebar.html
+++ b/sidebar.html
@@ -3,6 +3,7 @@
 <a href="#callBackend" class="sideBarItem">Call Backend</a>
 <a href="#tableFunction" class="sideBarItem">Table Function</a>
 <a href="#loginSession" class="sideBarItem">Set Session after Login</a>
+<a href="#jsSession" class="sideBarItem">JS Session</a>
 <a href="#doSpaces" class="sideBarItem">Digital Ocean</a>
 <a href="#socket" class="sideBarItem">Socket Function</a>
 <a href="#json" class="sideBarItem">JSON Function</a>
@@ -12,3 +13,6 @@
 <a href="#arrayFunction" class="sideBarItem">Array / Object Function</a>
 <a href="#numericInp" class="sideBarItem">Apply Numeric Input</a>
 <a href="#conditionalStatement" class="sideBarItem">Conditional Statement</a>
+<span class="sideBarTitle">Other Function</span>
+<a href="#setCookie" class="sideBarItem">Set Cookie</a>
+<a href="#submitForm" class="sideBarItem">Payment Gateway</a>
